 -------------------------------------------

 List of changes for all supported software

 -------------------------------------------

11/19/15
Freeze JLAB_VERSION devel to 1.3:

 - DEFAULT_CLHEP_VERSION    = 2.2.0.8
 - DEFAULT_QT_VERSION       = 5.5.0
 - DEFAULT_XERCESC_VERSION  = 3.1.1
 - DEFAULT_GEANT4_VERSION   = 4.10.01.p02
 - DEFAULT_GEMC_VERSION     = 2.3
 - DEFAULT_JANA_VERSION     = 0.7.2
 - DEFAULT_ROOT_VERSION     = 5.34.30
 - DEFAULT_BANKS_VERSION    = 1.2
 - DEFAULT_SCONS_BM_VERSION = 1.3
 - DEFAULT_EVIO_VERSION     = 4.4.4
 - DEFAULT_CCDB_VERSION     = 1.03

7/31/15
- on mac, using active cpus
- redirecting untar output to null whenever possible
- better log for qt installation
- devel version changes:
  - clhep to 2.2.08
  - qt to 5.5
    Warning:
    $QTDIR/lib/QtCore.framework/Versions/5/Headers/qobjectdefs.h
	 Needs to be modified:
	 #if defined(Q_CC_CLANG) && Q_CC_CLANG >= 306
	 #  define Q_OBJECT_NO_OVERRIDE_WARNING
	 //#  define Q_OBJECT_NO_OVERRIDE_WARNING      QT_WARNING_DISABLE_CLANG("-Winconsistent-missing-override")
	 #else
	 #  define Q_OBJECT_NO_OVERRIDE_WARNING
	 #endif

  - geant4 to 4.10.1.p02

5/27/15
- added subversion to red-hat releases in osrelease.pl

5/4/15
- root version for devel changed to 5.34.30

2/19/15
- fixed wrong log for get_coptions w/o parameters. Now giving "env" argument to it. Fixes for both 1.2 and devel versions
- devel versions upgrades
  clhep 2.2.0.5
  qt 5.4
  geant4 10.1 (including data)
  evio 4.4.4

2/11/15
- added i686 case for qt path

2/9/15
- first commit to github
- Removed expat from dependencies
- Added xcode developers tools installation instructions
- Distinguishing between devel and 1.2 install instructions
- Fixed tar command, directory list is at the end
- Removed gemc 1.8 case

2/3/15
- added html instructions for the packages installation
- automatically install instructions when tarballing ceInstall
- importing correct solenoid field map for clas12

1/29/15