@@ -56,7 +56,7 @@ else if ($JLAB_VERSION == "1.3") then
 	set DEFAULT_GEANT4_VERSION   = 4.10.01.p02
 	set DEFAULT_GEMC_VERSION     = 2.3
 	set DEFAULT_JANA_VERSION     = 0.7.2
-	set DEFAULT_ROOT_VERSION     = 5.34.30
+	set DEFAULT_ROOT_VERSION     = 5.34.34
 	set DEFAULT_BANKS_VERSION    = 1.2
 	set DEFAULT_SCONS_BM_VERSION = 1.3
 	set DEFAULT_EVIO_VERSION     = 4.4.4
@@ -70,12 +70,12 @@ else if ($JLAB_VERSION == "devel") then
 	set DEFAULT_XERCESC_VERSION  = 3.1.1
 	set DEFAULT_GEANT4_VERSION   = 4.10.01.p02
 	set DEFAULT_GEMC_VERSION     = devel
-	set DEFAULT_JANA_VERSION     = 0.7.2
-	set DEFAULT_ROOT_VERSION     = 5.34.30
+	set DEFAULT_JANA_VERSION     = 0.7.3
+	set DEFAULT_ROOT_VERSION     = 5.34.34
 	set DEFAULT_BANKS_VERSION    = devel
 	set DEFAULT_SCONS_BM_VERSION = devel
 	set DEFAULT_EVIO_VERSION     = 4.4.4
-	set DEFAULT_CCDB_VERSION     = 1.03
+	set DEFAULT_CCDB_VERSION     = 1.05
 endif
 
 
