@@ -63,17 +63,15 @@
 
 <ul>
 	<h3> Fedora (red-hat line) specific requirements</h3>
-	<i> These can be installed with yum like this:  </i>
-	<pre> yum install community-mysql. </pre>
+	<i> These can be installed with yum (or dnf for latest Fedora releases) like this:  </i>
+	<pre> yum install gcc-c++ </pre>
+	<pre> dnf install gcc-c++ </pre>
 	<ul>
 		<li> gcc-c++ </li>
-		<li> community-mysql </li>
-		<li> community-mysql-devel</li>
 		<li> libx11-devel</li>
-		<li> libGLU-devel</li>
-		<li> libXt-devel</li>
+		<li> mesa-libGLU-devel</li>
 		<li> libXmu-devel</li>
-		<li> expat1-devel</li>
+		<li> expat-devel</li>
 	</ul>
 </ul>
 <br>
