@@ -4,8 +4,16 @@
 
  -------------------------------------------
 
+11/24/15
+- switched to the latest version of root5: 5.34.34
+
+11/23/15
+- re-implemented cmake version checking (fixed initial typo)
+- no need for gemc 1.8 compatibility check anymore
+
+
 11/19/15
-Freeze JLAB_VERSION devel to 1.3:
+pre-freeze JLAB_VERSION devel to 1.3:
 
  - DEFAULT_CLHEP_VERSION    = 2.2.0.8
  - DEFAULT_QT_VERSION       = 5.5.0
